--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:design:25.3.1'
-    compile 'com.android.volley:volley:1.+'
-    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
-    compile 'org.apache.httpcomponents:httpmime:4.3.1'
-    compile 'com.google.code.gson:gson:2.7'
 
-    // for disk cache
-    compile 'com.jakewharton:disklrucache:2.0.2'
     // for one signal
     compile 'com.onesignal:OneSignal:3.+@aar'
     // Required for OneSignal, even if you have added FCM.
@@ -21,19 +15,24 @@ dependencies {
     compile "com.google.android.gms:play-services-location:10.2.6"
     compile "com.google.android.gms:play-services-maps:10.2.6"
 
+    // this is for network (okhttp3)
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+
     // developer tools stetho for using chrome devTools
-    compile 'com.squareup.okhttp:okhttp:2.7.5'
-    compile 'com.facebook.stetho:stetho-okhttp:1.4.2'
-    compile 'com.facebook.stetho:stetho:1.4.2'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    compile 'com.facebook.stetho:stetho:1.5.0'
 
     // this is for image loading (glide)
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:glide-transformations:2.0.2'
 
     // this is for network (retrofit)
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    // this is for photo view zoom
+    compile 'com.commit451:PhotoView:1.2.4'
 
     // this is for fabric crashlytics
     compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
@@ -44,11 +43,6 @@ dependencies {
 android {
     compileSdkVersion 25
     buildToolsVersion '25.0.3'
-    useLibrary('org.apache.http.legacy')
-
-    repositories {
-        mavenCentral()
-    }
 
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
