--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <!--for in app purchase-->
-    <uses-permission android:name="com.android.vending.BILLING" />
     <!--to access storage-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!--to access location-->
@@ -35,6 +33,10 @@
         android:windowActionBar="false"
         android:windowNoTitle="true" >
 
+        <!-- for glide -->
+        <meta-data android:name="com.ssomcompany.ssomclient.network.SsomGlideModule" android:value="GlideModule" />
+
+        <!-- for google map -->
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_debug_key"/>
 
